force-app/main/default/objects/Data_Service_Details__mdt/Data_Service_Details__mdt.object-meta.xml
<CustomObject>
    <label>Data Service Details</label>
    <pluralLabel>Data Service Details</pluralLabel>
</CustomObject>