force-app/main/default/objects/Data_Service_Details__mdt/fields/Included_Fields__c.field-meta.xml
<CustomField>
    <fullName>Included_Fields__c</fullName>
    <label>Included Fields</label>
    <type>TextArea</type>
</CustomField>