force-app/main/default/objects/Data_Service_Details__mdt/fields/isTabular__c.field-meta.xml
<CustomField>
    <fullName>isTabular__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTabular</label>
    <type>Checkbox</type>
</CustomField>