force-app/main/default/objects/Data_Service_Details__mdt/fields/Section_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Field_Api_Name__c</fullName>
    <label>Section Field Api Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>