force-app/main/default/objects/Data_Service_Details__mdt/fields/Section_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Section_Field_Value__c</fullName>
    <label>Section Field Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>