force-app/main/default/objects/Data_Service_Details__mdt/fields/Section_Fields__c.field-meta.xml
<CustomField>
    <fullName>Section_Fields__c</fullName>
    <label>Section Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>