force-app/main/default/objects/Data_Service_Details__mdt/fields/Section_Label__c.field-meta.xml
<CustomField>
    <fullName>Section_Label__c</fullName>
    <label>Section Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>